bug 878792 - part 2/2 - 64bit clean logging changes for socket transport r=hurley